<resources>
    <string name="app_name">Hitung Absensi </string>

    <string name="deskripsi">Indeks Kehadiran (IK) adalah salah satu faktor dimana menentukan lulus
    atau tidaknya suatu matakulaih, khususnya buat Mahasiswa Telkom University.</string>

    <string name="jumlah_kehadiran">Kehadiran</string>
    <string name="jumlah_pertemuan">Pertemuan</string>

    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="mk_matif">Matif 2</string>
    <string name="mk_pancasila">Pancasila</string>
    <string name="mk_olahraga">Olahraga</string>
    <string name="mk_kewirausahaan">Kewirausahaan</string>
    <string name="mk_mobpro">Mobpro</string>
    <string name="mk_pt">PT2</string>
    <string name="mk_ppap">PPAP</string>
    <string name="mk_bindo">Bhs. Indonesia</string>

    <string name="kampus">Kampus</string>
    <string name="telkom">Telkom University</string>
    <string name="laen">Universitas Lain</string>

    <string name="hitung">Hitung</string>

    <string name="persentase_x">Persentase Kehadiran: %1$.2f</string>
    <string name="sangatAman">Sangat Aman</string>
    <string name="aman">Aman</string>
    <string name="tidakAman">Tidak Aman</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="kehadiran_invalid" >Kehadiran tidak boleh kosong.</string>
    <string name="pertemuan_invalid" >Pertemuan tidak boleh kosong.</string>
    <string name="kampus_invalid" >Kampus tidak boleh kosong.</string>

    <string name="t_sangat_aman">Absensi Sangat Aman</string>
    <string name="t_aman">Absensi Aman</string>
    <string name="t_tidak_aman">Absensi Tidak Aman</string>

    <string name="tb_sangat_aman">Sangat rajin, jadi tidak ada saran untuk berikan.</string>
    <string name="tb_aman">Berhati-hatilah, absensi rawan berkurang jika tidak fokus.</string>
    <string name="tb_tidak_aman">Sudah tidak ada harapan lagi.</string>

    <string name="lihat_tanggapan">Lihat Tanggapan</string>

    <string name="copyright">Hitung Absensi adalah sebuah aplikasi untuk menghitung
        Indeks Kehadiran (IK) dimana Indeks Kehadiran ini menjadi salah satu kriteria buat lulus
        dari suatu Mata Kuliah.\n\nAplikasi ini dibuat untuk Asesmen dari Mata Kuliah Mobpro di
        https://github.com/davidsryansa/d3if4303-asesmen2\n\nCopyright © 2021 Davids Ryansa Mamisala.
        \nAll rights reserved.</string>

    <string name="tentang_aplikasi">Tentang Aplikasi</string>

    <string name="bagikan">Bagikan</string>

    <string name="template_bagikan">Jumlah Kehadiran: %1$s kg\nJunlah Pertemuan: %2$s cm
        \nKeterangan Absen: %3$s\n\n%4$s\n%5$s</string>

    <string name="data_kosong">Belum Ada Data</string>
    <string name="histori">Histori</string>

    <string name="kehadiran_x">BB: %1$.1f</string>
    <string name="pertemuan_x">TB: %1$.1f</string>

    <string name="hapus_histori">Hapus Histori</string>

    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
</resources>
